# Agentic-RAG

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 20ef6b7e8f38_initial_schema.py  754d8fdef922_baseline_existing_schema.py  f9211c70bae7_add_minio_storage_fields.py
apps/conversations/: crud.py  router.py  schemas.py  service.py
apps/rag/: __init__.py  agent.py  bm25.py  crud.py  embedding.py  fusion.py  hybrid_retrieve.py  parser.py  prompts.py  query_service.py  queue.py  reranker.py  retrieval.py  router.py  schemas.py  service.py  splitter.py  storage.py  tasks.py  vector_store.py
apps/rag/workflow/: context.py  graph.py  nodes.py  prompts.py  state.py
apps/user/: __init__.py  crud.py  router.py  schemas.py
config/: agent_config.py  db_config.py  minio_config.py  qdrant_config.py  redis_config.py
core/: middleware.py  queue.py
evaluation/: dataset.jsonl  evaluation_bm25.py  evaluation_ragas.py  evaluation_rerank.py  evaluation_retrieval.py
evaluation/results/: 30_0.0_vector_baseline_details.json  30_0.0_vector_baseline_summary.json  vector_baseline_details.json  vector_baseline_summary.json
models/: base.py  conversations.py  documents.py  users.py
scripts/: init_qdrant.py
test/: test_agent.py  test_parser.py  test_query.py  test_reranker.py  test_retrieval.py  test_retry.py  test_security.py  test_upload.py
utils/: jwt.py  security.py
