[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.137.1",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "minio>=7.2.20",
    "passlib>=1.7.4",
    "pypdf>=6.13.3",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "httpx>=0.28",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "psycopg[binary,pool]>=3.3.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "ragas>=0.4.3",
    "langchain-community>=0.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
asyncio_mode = "auto"
addopts = "-p no:cacheprovider"
